--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
                       <div class="unit unit-spacing-xs">
                         <div class="unit-left"><span class="icon fa fa-clock-o"></span></div>
                         <div class="unit-body">
-                          <p>09:00<span>am</span> — 05:00<span>pm</span></p>
+                          <p>08:00<span></span> — 18:00<span></span></p>
                         </div>
                       </div>
                     </li>
                     <li>
                       <div class="unit unit-spacing-xs">
                         <div class="unit-left"><span class="icon fa fa-phone"></span></div>
-                        <div class="unit-body"><a class="link-phone" href="tel:#">+1 323-913-4688</a></div>
+                        <div class="unit-body"><a class="link-phone" href="tel:#">+90 532 770 5505</a></div>
                       </div>
                     </li>
-                  </ul><a class="button button-md button-default-outline-2 button-ujarak" href="#">Get a Free Quote</a>
+                  </ul> <!-- <a class="button button-md button-default-outline-2 button-ujarak" href="#">Get a Free Quote</a> -->
                 </div>
               </div>
             </div>
