--- a/index.html
+++ b/index.html
@@ -287,12 +287,12 @@
           </div>
         </div>
       </section>
-      <!-- Hot tours-->
-      <section class="section section-sm bg-default">
+      <!-- Hot tours--> <!--Gizlendi-->
+   <!--    <section class="section section-sm bg-default">
         <div class="container">
           <h3 class="oh-desktop"><span class="d-inline-block wow slideInDown">Hot Tours</span></h3>
           <div class="row row-sm row-40 row-md-50">
-            <div class="col-sm-6 col-md-12 wow fadeInRight">
+            <div class="col-sm-6 col-md-12 wow fadeInRight"> -->
               <!-- Product Big-->
               <article class="product-big">
                 <div class="unit flex-column flex-md-row align-items-md-stretch">
@@ -331,12 +331,12 @@
           </div>
         </div>
       </section>
-      <!-- Different People-->
-      <section class="section section-sm">
+      <!-- Different People--> <!-- Gizlendi-->
+ <!--     <section class="section section-sm">
         <div class="container">
           <h3 class="title-block find-car oh"><span class="d-inline-block wow slideInUp">Different People — One Mission</span></h3>
           <div class="row row-30 justify-content-center box-ordered">
-            <div class="col-sm-6 col-md-5 col-lg-3">
+            <div class="col-sm-6 col-md-5 col-lg-3"> -->
               <!-- Team Modern-->
               <article class="team-modern">
                 <div class="team-modern-header"><a class="team-modern-figure" href="#"><img class="img-circles" src="images/user-1-118x118.jpg" alt="" width="118" height="118"/></a>
