--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
           <h3 class="title-block find-car oh"><span class="d-inline-block wow slideInUp">Different People — One Mission</span></h3>
           <div class="row row-30 justify-content-center box-ordered">
             <div class="col-sm-6 col-md-5 col-lg-3"> -->
-              <!-- Team Modern-->
-              <article class="team-modern">
+              <!-- Team Modern-->  <!-- Gizlendi-->
+           <!--   <article class="team-modern">
                 <div class="team-modern-header"><a class="team-modern-figure" href="#"><img class="img-circles" src="images/user-1-118x118.jpg" alt="" width="118" height="118"/></a>
                   <svg x="0px" y="0px" width="270px" height="70px" viewbox="0 0 270 70" enable-background="new 0 0 270 70" xml:space="preserve">
                     <g>
@@ -353,9 +353,9 @@
                 </div>
               </article>
             </div>
-            <div class="col-sm-6 col-md-5 col-lg-3">
-              <!-- Team Modern-->
-              <article class="team-modern">
+            <div class="col-sm-6 col-md-5 col-lg-3"> -->
+              <!-- Team Modern--> <!-- Gizlendi-->
+         <!--     <article class="team-modern">
                 <div class="team-modern-header"><a class="team-modern-figure" href="#"><img class="img-circles" src="images/user-2-118x118.jpg" alt="" width="118" height="118"/></a>
                   <svg x="0px" y="0px" width="270px" height="70px" viewbox="0 0 270 70" enable-background="new 0 0 270 70" xml:space="preserve">
                     <g>
@@ -370,9 +370,9 @@
                 </div>
               </article>
             </div>
-            <div class="col-sm-6 col-md-5 col-lg-3">
+            <div class="col-sm-6 col-md-5 col-lg-3"> -->
               <!-- Team Modern-->
-              <article class="team-modern">
+        <!--  <article class="team-modern">
                 <div class="team-modern-header"><a class="team-modern-figure" href="#"><img class="img-circles" src="images/user-3-118x118.jpg" alt="" width="118" height="118"/></a>
                   <svg x="0px" y="0px" width="270px" height="70px" viewbox="0 0 270 70" enable-background="new 0 0 270 70" xml:space="preserve">
                     <g>
@@ -387,9 +387,9 @@
                 </div>
               </article>
             </div>
-            <div class="col-sm-6 col-md-5 col-lg-3">
+            <div class="col-sm-6 col-md-5 col-lg-3">  -->
               <!-- Team Modern-->
-              <article class="team-modern">
+      <!--        <article class="team-modern">
                 <div class="team-modern-header"><a class="team-modern-figure" href="#"><img class="img-circles" src="images/user-4-118x118.jpg" alt="" width="118" height="118"/></a>
                   <svg x="0px" y="0px" width="270px" height="70px" viewbox="0 0 270 70" enable-background="new 0 0 270 70" xml:space="preserve">
                     <g>
@@ -406,7 +406,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section>  -->  -->
       <!-- Section Subscribe-->
       <section class="section bg-default text-center offset-top-50">
         <div class="parallax-container" data-parallax-img="images/parallax-1-1920x850.jpg">
@@ -476,7 +476,8 @@
           </div>
         </div>
       </section>
-      <!-- Page Footer--><a class="banner" href="https://www.templatemonster.com/intense-multipurpose-html-template.html" target="_blank"><img src="images/intense_big_02.jpg" alt=""/></a>
+      <!-- Page Footer-->
+    <!-- Reklam gizlendi-->   <!--   <a class="banner" href="https://www.templatemonster.com/intense-multipurpose-html-template.html" target="_blank"><img src="images/intense_big_02.jpg" alt=""/></a> -->
       <footer class="section footer-corporate context-dark">
         <div class="footer-corporate-inset">
           <div class="container">
