--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
           <h3 class="oh-desktop"><span class="d-inline-block wow slideInDown">Hot Tours</span></h3>
           <div class="row row-sm row-40 row-md-50">
             <div class="col-sm-6 col-md-12 wow fadeInRight"> -->
-              <!-- Product Big-->
-              <article class="product-big">
+              <!-- Product Big--> <!-- Gizlendi-->
+         <!--      <article class="product-big">
                 <div class="unit flex-column flex-md-row align-items-md-stretch">
                   <div class="unit-left"><a class="product-big-figure" href="#"><img src="images/product-big-1-600x366.jpg" alt="" width="600" height="366"/></a></div>
                   <div class="unit-body">
@@ -310,9 +310,9 @@
                 </div>
               </article>
             </div>
-            <div class="col-sm-6 col-md-12 wow fadeInLeft">
-              <!-- Product Big-->
-              <article class="product-big">
+            <div class="col-sm-6 col-md-12 wow fadeInLeft"> -->
+              <!-- Product Big--> <!-- Gizlendi-->
+       <!--        <article class="product-big">
                 <div class="unit flex-column flex-md-row align-items-md-stretch">
                   <div class="unit-left"><a class="product-big-figure" href="#"><img src="images/product-big-2-600x366.jpg" alt="" width="600" height="366"/></a></div>
                   <div class="unit-body">
@@ -330,7 +330,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section>   -->
       <!-- Different People--> <!-- Gizlendi-->
  <!--     <section class="section section-sm">
         <div class="container">
