--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="page">
-      <!-- Page Header--> <!-- Gizlendi-->
+      <!-- Page Header-->                                              <!-- Gizlendi-->
       <!-- <a class="banner banner-top" href="https://www.templatemonster.com/intense-multipurpose-html-template.html" target="_blank"><img src="images/intense_02.jpg" alt=""/></a>
       <header class="section page-header">  -->
         <!-- RD Navbar-->
@@ -130,8 +130,8 @@
         <!-- Swiper Pagination-->
         <div class="swiper-pagination"></div>
       </section>
-      <!-- Section Box Categories-->
-      <section class="section section-lg section-top-1 bg-gray-4">
+      <!-- Section Box Categories-->                                         <!--Gizlendi-->
+      <!--    <section class="section section-lg section-top-1 bg-gray-4">
         <div class="container offset-negative-1">
           <div class="box-categories cta-box-wrap">
             <div class="box-categories-content">
@@ -159,8 +159,8 @@
                 </div>
               </div>
             </div>
-          </div><a class="link-classic wow fadeInUp" href="#">Other Tours<span></span></a>
-          <!-- Owl Carousel-->
+          </div><a class="link-classic wow fadeInUp" href="#">Other Tours<span></span></a>            -->
+          <!-- Owl Carousel-->           
         </div>
       </section>
       <!-- Discover New Horizons-->
@@ -287,7 +287,7 @@
           </div>
         </div>
       </section>
-      <!-- Hot tours--> <!--Gizlendi-->
+      <!-- Hot tours-->                                                       <!--Gizlendi-->
    <!--    <section class="section section-sm bg-default">
         <div class="container">
           <h3 class="oh-desktop"><span class="d-inline-block wow slideInDown">Hot Tours</span></h3>
@@ -311,7 +311,7 @@
               </article>
             </div>
             <div class="col-sm-6 col-md-12 wow fadeInLeft"> -->
-              <!-- Product Big--> <!-- Gizlendi-->
+              <!-- Product Big-->                                              <!-- Gizlendi-->
        <!--        <article class="product-big">
                 <div class="unit flex-column flex-md-row align-items-md-stretch">
                   <div class="unit-left"><a class="product-big-figure" href="#"><img src="images/product-big-2-600x366.jpg" alt="" width="600" height="366"/></a></div>
@@ -331,7 +331,7 @@
           </div>
         </div>
       </section>   -->
-      <!-- Different People--> <!-- Gizlendi-->
+      <!-- Different People-->                                            <!-- Gizlendi-->
  <!--     <section class="section section-sm">
         <div class="container">
           <h3 class="title-block find-car oh"><span class="d-inline-block wow slideInUp">Different People — One Mission</span></h3>
@@ -354,7 +354,7 @@
               </article>
             </div>
             <div class="col-sm-6 col-md-5 col-lg-3"> -->
-              <!-- Team Modern--> <!-- Gizlendi-->
+              <!-- Team Modern-->                                               <!-- Gizlendi-->
          <!--     <article class="team-modern">
                 <div class="team-modern-header"><a class="team-modern-figure" href="#"><img class="img-circles" src="images/user-2-118x118.jpg" alt="" width="118" height="118"/></a>
                   <svg x="0px" y="0px" width="270px" height="70px" viewbox="0 0 270 70" enable-background="new 0 0 270 70" xml:space="preserve">
@@ -371,7 +371,7 @@
               </article>
             </div>
             <div class="col-sm-6 col-md-5 col-lg-3"> -->
-              <!-- Team Modern-->
+              <!-- Team Modern-->                                               <!--Gizlendi-->
         <!--  <article class="team-modern">
                 <div class="team-modern-header"><a class="team-modern-figure" href="#"><img class="img-circles" src="images/user-3-118x118.jpg" alt="" width="118" height="118"/></a>
                   <svg x="0px" y="0px" width="270px" height="70px" viewbox="0 0 270 70" enable-background="new 0 0 270 70" xml:space="preserve">
@@ -388,7 +388,7 @@
               </article>
             </div>
             <div class="col-sm-6 col-md-5 col-lg-3">  -->
-              <!-- Team Modern-->
+              <!-- Team Modern-->                                                <!--Gizlendi-->
       <!--        <article class="team-modern">
                 <div class="team-modern-header"><a class="team-modern-figure" href="#"><img class="img-circles" src="images/user-4-118x118.jpg" alt="" width="118" height="118"/></a>
                   <svg x="0px" y="0px" width="270px" height="70px" viewbox="0 0 270 70" enable-background="new 0 0 270 70" xml:space="preserve">
