--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               </div>
             </div>
           </div>
-          <div class="swiper-slide context-dark" data-slide-bg="images/ustresim33.jpg">
+          <div class="swiper-slide context-dark" data-slide-bg="images/ustresim33.png">
             <div class="swiper-slide-caption section-md">
               <div class="container">
                 <div class="row">
