--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     <li>
                       <div class="unit unit-spacing-xs">
                         <div class="unit-left"><span class="icon fa fa-phone"></span></div>
-                        <div class="unit-body"><a class="link-phone" href="tel:#">+90 532 770 5505</a></div>
-                      </div>
+                        <div class="unit-body"><a class="link-phone" href="tel:+90 532 770 5505">+90 532 770 5505</a></div>
+                      </div> 
                     </li>
                   </ul> <!-- <a class="button button-md button-default-outline-2 button-ujarak" href="#">Get a Free Quote</a> -->
                 </div>
@@ -171,28 +171,27 @@
             </div>
             <div class="col-lg-6 wow fadeInRight" data-wow-delay=".1s">
               <div class="box-width-lg-470">
-                <h3>Discover New Horizons</h3>
+                <h3>Firmamız </h3>
                 <!-- Bootstrap tabs-->
                 <div class="tabs-custom tabs-horizontal tabs-line tabs-line-big tabs-line-style-2 text-center text-md-left" id="tabs-7">
                   <!-- Nav tabs-->
                   <ul class="nav nav-tabs">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#tabs-7-1" data-toggle="tab">About us</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-7-2" data-toggle="tab">Why choose us</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-7-3" data-toggle="tab">Our mission</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#tabs-7-1" data-toggle="tab">Hakkımızda</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-7-2" data-toggle="tab">Niçin bizi seçmelisiniz</a></li>
                   </ul>
                   <!-- Tab panes-->
                   <div class="tab-content">
                     <div class="tab-pane fade show active" id="tabs-7-1">
-                      <p>Wonder Tour is committed to bringing our clients the best in value and quality travel arrangements. We are passionate about travel and sharing the world's wonders with you.</p>
-                      <div class="group-md group-middle"><a class="button button-secondary button-pipaluk" href="contact-us.html">Get in Touch</a><a class="button button-black-outline button-md" href="about.html">Read More</a></div>
+                      <p>Özen Tente, müşterilerimize en iyi değeri ve kaliteli proje düzenlemelerini sunmak için hazırdır.</p>
+                      <div class="group-md group-middle"><a class="button button-secondary button-pipaluk" href="tel:+90 532 770 5505">+90 532 770 5505>İletişime geçin</a></div>
                     </div>
                     <div class="tab-pane fade" id="tabs-7-2">
-                      <p>We are proud to offer excellent quality and value for money in our tours, which give you the chance to experience your chosen destination in an authentic and exciting way.</p>
-                      <div class="group-md group-middle"><a class="button button-secondary button-pipaluk" href="contact-us.html">Get in Touch</a><a class="button button-black-outline button-md" href="about.html">Read More</a></div>
+                      <p>Aklınızdaki fikri hayata geçirmek için 20+ den fazla yıllık tecrübemize güveniyoruz</p>
+                      <div class="group-md group-middle"><a class="button button-secondary button-pipaluk" href="tel:+90 532 770 5505">+90 532 770 5505>İletişime geçin</a></div>
                     </div>
                     <div class="tab-pane fade" id="tabs-7-3">
                       <p>Our mission is to provide the ultimate travel planning experience while becoming a one-stop shop for every travel service available in the industry.</p>
-                      <div class="group-md group-middle"><a class="button button-secondary button-pipaluk" href="contact-us.html">Get in Touch</a><a class="button button-black-outline button-md" href="about.html">Read More</a></div>
+                      <div class="group-md group-middle"><a class="button button-secondary button-pipaluk" href="tel:+90 532 770 5505">+90 532 770 5505>Get in Touch</a><a class="button button-black-outline button-md" href="about.html">Read More</a></div>
                     </div>
                   </div>
                 </div>
