--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     <div class="box-icon-classic-icon fl-bigmug-line-favourites5"></div>
                   </div>
                   <div class="unit-body">
-                    <h5 class="box-icon-classic-title"><a href="#">Uygun fiyat</a></h5>
+                    <h5 class="box-icon-classic-title"><a href="#">Hızlı İletişim</a></h5>
                   
                   </div>
                 </div>
