--- a/index.html
+++ b/index.html
@@ -408,11 +408,11 @@
       </section>  -->  -->
       <!-- Section Subscribe-->
       <section class="section bg-default text-center offset-top-50">
-        <div class="parallax-container" data-parallax-img="images/parallax-1-1920x850.jpg">
+        <div class="parallax-container" data-parallax-img="images/altresim.jpg">
           <div class="parallax-content section-xl section-inset-custom-1 context-dark bg-overlay-2-21">
             <div class="container">
-              <h2 class="heading-2 oh font-weight-normal wow slideInDown"><span class="d-block font-weight-semi-bold">First-class Impressions</span><span class="d-block font-weight-light">are Waiting for You!</span></h2>
-              <p class="text-width-medium text-spacing-75 wow fadeInLeft" data-wow-delay=".1s">Our agency offers travelers various tours and excursions with destinations all over the world. Browse our website to find your dream tour!</p><a class="button button-secondary button-pipaluk" href="#">Book a Tour Now</a>
+              <h2 class="heading-2 oh font-weight-normal wow slideInDown"><span class="d-block font-weight-semi-bold">Birinci Kalite Üretim</span><span class="d-block font-weight-light">Seni bekliyor</span></h2>
+              <p class="text-width-medium text-spacing-75 wow fadeInLeft" data-wow-delay=".1s">Evinizde, bahçenizde, kafeteryada ve pastanede ve daha bir çok yerde kullanabileceğiniz ürünler üretiyoruz.</p><a class="button button-secondary button-pipaluk" href="tel:+90 532 770 5505">+90 532 770 5505>Bize Ulaşın</a>
             </div>
           </div>
         </div>
