--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                   <ul class="rd-navbar-nav">
                     <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Ana Sayfa</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">Hakkımızda</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="#section section-sm section-first bg-default text-md-left">Hakkımızda</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="contact-us.html">İletişim </a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="#footer-corporate-inset">İletişim </a>
                     </li>
                   </ul>
                 </div>
