--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                   <ul class="rd-navbar-nav">
                     <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Ana Sayfa</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="#section section-sm section-first bg-default text-md-left">Hakkımızda</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="#hakkimizda">Hakkımızda</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="#footer-corporate-inset">İletişim </a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="#iletisim">İletişim </a>
                     </li>
                   </ul>
                 </div>
@@ -164,7 +164,7 @@
         </div>
       </section>
       <!-- Discover New Horizons-->
-      <section class="section section-sm section-first bg-default text-md-left">
+      <section  id="hakkimizda" class="section section-sm section-first bg-default text-md-left">
         <div class="container">
           <div class="row row-50 align-items-center justify-content-center justify-content-xl-between">
             <div class="col-lg-6 text-center wow fadeInUp"><img src="images/hakkimizda.jpg" alt="" width="556" height="382"/>
@@ -408,7 +408,7 @@
       </section>  -->  -->
       <!-- Section Subscribe-->
       <section class="section bg-default text-center offset-top-50">
-        <div class="parallax-container" data-parallax-img="images/altresim.jpg">
+        <div id="iletisim" class="parallax-container" data-parallax-img="images/altresim.jpg">
           <div class="parallax-content section-xl section-inset-custom-1 context-dark bg-overlay-2-21">
             <div class="container">
               <h2 class="heading-2 oh font-weight-normal wow slideInDown"><span class="d-block font-weight-semi-bold">Birinci Kalite Üretim</span><span class="d-block font-weight-light">Seni bekliyor</span></h2>
