--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
   <head>
+    <meta name="google-site-verification" content="0UNdlHpDVcNB-EzvrtK3gFWKB9J9E7cLKEzbj2dPv_U" />
     <title>Ana Sayfa</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
