--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="wide wow-animation" lang="tr">
   <head>
     <meta name="google-site-verification" content="0UNdlHpDVcNB-EzvrtK3gFWKB9J9E7cLKEzbj2dPv_U">
-    <title>Şanlıurfa Özen Tente</title>
+    <title>Özen Tente - Şanlıurfa'da Kaliteli Tente ve Branda Hizmetleri</title>
     <meta name="description" content="Özen Tente, ürünlerimizle size hizmet vermekten gurur duyar. En kaliteli ürünleri en uygun fiyatlarla sunuyoruz.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
