--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="tr">
   <head>
-    <meta name="google-site-verification" content="0UNdlHpDVcNB-EzvrtK3gFWKB9J9E7cLKEzbj2dPv_U">
+<!--sahiplik doğrulaması gerek kalmadı-->  <!--  <meta name="google-site-verification" content="0UNdlHpDVcNB-EzvrtK3gFWKB9J9E7cLKEzbj2dPv_U"> -->
     <title>Özen Tente - Şanlıurfa'da Kaliteli Tente ve Branda Hizmetleri</title>
     <meta name="description" content="Özen Tente, ürünlerimizle size hizmet vermekten gurur duyar. En kaliteli ürünleri en uygun fiyatlarla sunuyoruz.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     
@@ -23,15 +22,14 @@
 </head>
 
   <body>
-    <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
-    <div class="preloader">
+  <!-- preloader yavaşlatıyor kaldırdım -->   <!--  <div class="preloader">
       <div class="preloader-body">
-        <div class="cssload-container">
+        <div class="cssload-container"> 
           <div class="cssload-speeding-wheel"></div>
         </div>
         <p>Yükleniyor...</p>
       </div>
-    </div>
+    </div> -->
     <div class="page">
       <!-- Page Header-->                                              <!-- Gizlendi-->
       <!-- <a class="banner banner-top" href="https://www.templatemonster.com/intense-multipurpose-html-template.html" target="_blank"><img src="images/intense_02.jpg" alt=""/></a>
